Use List.of()